# gimme-cli

./: .gitpod.yml  Cargo.toml  LICENSE  README.md  go.mod  main.go
cmd/: add.go  root.go
src/: gimme_interface.rs  main.rs
