[package]
name = "gimme-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json", "multipart", "blocking"] }
simple-error = "0.2"
serde_json = "1"

[dev-dependencies]
httpmock = "0.6"